--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Sortable Photo Gallery</title>
 		<meta id="viewport" name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="node_modules/bulma/css/bulma.css" />
-		<link rel="stylesheet" type="text/css" href="includes/sortable_gallery.css" />
+		<link rel="stylesheet" type="text/css" href="./node_modules/bulma/css/bulma.css" />
+		<link rel="stylesheet" type="text/css" href="./includes/sortable_gallery.css" />
 		<script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
